Fixed bug where select element was not populated in FireFox

--- a/signwise.html
+++ b/signwise.html
@@ -46,6 +46,7 @@
       var opt = document.createElement('option');
       opt.value = options[j];
       opt.innerText = options[j];
+      opt.textContent = options[j];
       sel.appendChild(opt);
     }
     sel.selectedIndex = 0;
